# hyperion_openwrt_mt7620

./: CMakeLists.txt  HyperionConfig.h.in  README.md  build.sh
cmake/: FindRPi.cmake
effects/: knight-rider.lua  mood-blobs-blue.json  mood-blobs-cold.json  mood-blobs-green.json  mood-blobs-red.json  mood-blobs-warm.json  rainbow-mood.json  rainbow-mood.lua  rainbow-swirl-fast.json  rainbow-swirl.lua  snake.json  strobe-raspbmc.json  strobe-white.json  strobe.lua
include/blackborder/: BlackBorderDetector.h  BlackBorderProcessor.h
include/boblightserver/: BoblightServer.h
include/effectengine/: EffectEngine.h
include/grabber/: FrameGrabber.h  FrameGrabberFactory.h
include/hyperion/: ColorTransform.h  Hyperion.h  ImageProcessor.h  ImageProcessorFactory.h  ImageToLedsMap.h  LedString.h  PriorityMuxer.h
include/jsonserver/: JsonServer.h
include/kodiconnector/: KodiConnector.h
include/leddevice/: LedDevice.h  LedDeviceFactory.h
include/protoserver/: ProtoServer.h
include/utils/: ColorArgb.h  ColorRgb.h  ColorRgba.h  DelegateArgs.h  GrabbingMode.h  HyperionControlEvents.h  ImageResampler.h  JsonTools.h  KodiConnectorEvents.h  VideoMode.h
libsrc/: CMakeLists.txt
libsrc/blackborder/: BlackBorderDetector.cpp  BlackBorderProcessor.cpp  CMakeLists.txt
libsrc/boblightserver/: BoblightClientConnection.cpp  BoblightClientConnection.h  BoblightServer.cpp  CMakeLists.txt
libsrc/effectengine/: CMakeLists.txt  Effect.cpp  Effect.h  EffectEngine.cpp
libsrc/grabber/: CMakeLists.txt  DispmanxFrameGrabber.cpp  DispmanxFrameGrabber.h  FrameGrabber.cpp  FrameGrabberFactory.cpp  FramebufferFrameGrabber.cpp  FramebufferFrameGrabber.h  OSXFrameGrabber.cpp  OSXFrameGrabber.h  V4L2Grabber.h  V4L2Wrapper.cpp  VideoStandard.h  X11FrameGrabber.cpp  X11FrameGrabber.h
libsrc/grabber/v4l2/: CMakeLists.txt  V4L2Grabber.cpp
libsrc/hyperion/: CMakeLists.txt  Hyperion.cpp  ImageProcessor.cpp  ImageProcessorFactory.cpp  ImageToLedsMap.cpp  LedString.cpp  LinearColorSmoothing.cpp  LinearColorSmoothing.h  MultiColorTransform.cpp  MultiColorTransform.h  PriorityMuxer.cpp
libsrc/jsonserver/: CMakeLists.txt  JsonClientConnection.cpp  JsonClientConnection.h  JsonServer.cpp
libsrc/kodiconnector/: CMakeLists.txt  KodiConnector.cpp
libsrc/leddevice/: CMakeLists.txt  LedDeviceAPA102.cpp  LedDeviceAPA102.h  LedDeviceAdalight.cpp  LedDeviceAdalight.h  LedDeviceAmbiLed.cpp  LedDeviceAmbiLed.h  LedDeviceAtmo.cpp  LedDeviceAtmo.h  LedDeviceFactory.cpp  LedDeviceHyperionUsbasp.cpp  LedDeviceHyperionUsbasp.h  LedDeviceLightpack-hidapi.cpp  LedDeviceLightpack-hidapi.h  LedDeviceLightpack.cpp  LedDeviceLightpack.h  LedDeviceLpd6803.cpp  LedDeviceLpd6803.h  LedDeviceLpd8806.cpp  LedDeviceLpd8806.h  LedDeviceMultiLightpack.cpp  LedDeviceMultiLightpack.h  LedDeviceP9813.cpp  LedDeviceP9813.h  LedDevicePaintpack.cpp  LedDevicePaintpack.h  LedDevicePhilipsHue.cpp  LedDevicePhilipsHue.h  LedDevicePiBlaster.cpp  LedDevicePiBlaster.h  LedDeviceSedu.cpp  LedDeviceSedu.h  LedDeviceTest.cpp  LedDeviceTest.h  LedDeviceTinkerforge.cpp  LedDeviceTinkerforge.h  LedDeviceTpm2Serial.cpp  LedDeviceTpm2Serial.h  LedDeviceTpm2TcpSocket.cpp  LedDeviceTpm2TcpSocket.h  (+14 more)
libsrc/utils/: CMakeLists.txt  ImageResampler.cpp  JsonTools.cpp
patches/serial/: CMakeLists.txt
src/: CMakeLists.txt
src/hyperion-remote/: CMakeLists.txt  ColorTransformValues.h  ColorValue.h  CustomParameter.h  JsonConnection.cpp  JsonConnection.h  hyperion-remote.cpp
src/hyperiond/: CMakeLists.txt  hyperiond.cpp
test/: CMakeLists.txt  TestBlackBorderDetector.cpp  TestBlackBorderProcessor.cpp  TestColorTransform.cpp  TestConfigFile.cpp  TestHyperionPng.cpp  TestImage2LedsMap.cpp  TestQRegExp.cpp  TestQtScreenshot.cpp  TestRgbImage.cpp  TestSpi.cpp  TestX11Performance.cpp  TimerTest.cpp
test/dispmanx2png/: dispmanx2png.cpp
